# challenge-EddieRichardson

./: .gitignore  README.md  dev-requirements.txt  requirements.txt
Challenge4-Twilio/: README.md  app.py  cli.py  dev_server.ps1  notes.txt  requirements.txt
Challenge4-Twilio/routes/: inbound.py
Challenge4-Twilio/static/: style.css
Challenge4-Twilio/templates/: index.html
Challenge4-Twilio/utils/: sms.py
Challenge5-Port & Fix/: CHANGELOG.md  README.md  WORKFLOW.md
Challenge5-Port & Fix/docs/: architecture.md  assumptions.md  bugs.md  index.md  reverse-engineering.md  testing.md
Challenge5-Port & Fix/legacy/: Buggy.cpp  README-legacy.md
Challenge5-Port & Fix/tests/: conftest.py  test_books.py  test_cli.py  test_engine.py  test_system.py  test_users.py
Challenge5-Port-Fix/: .coverage  CHANGELOG.md  CaseStudy.md  README.md  WORKFLOW.md  pyproject.toml  pytest.ini
Challenge5-Port-Fix/docs/: architecture.md  assumptions.md  bugs.md  future.md  index.md  reverse-engineering.md  testing.md
Challenge5-Port-Fix/legacy/: Buggy.cpp  README-legacy.md
Challenge5-Port-Fix/src/portfix/: cli.py
Challenge5-Port-Fix/src/portfix/core/: books.py  engine.py  users.py
Challenge5-Port-Fix/src/portfix/io/: helpers.py
Challenge5-Port-Fix/tests/: conftest.py  test_books.py  test_cli.py  test_end_to_end.py  test_engine.py  test_helpers.py  test_smoke.py  test_system.py  test_users.py
