[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portfix"
version = "0.1.0"
description = "A simple library system CLI"
authors = [{ name = "Eddie Richardson" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
